--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contrate o profissional certo para tirar suas
-    ideias do papel, faça já seu orçamento!">
+    <meta name="description" content="Projetos de um estudante em busca de uma oportunidade no mercado de desenvolvimento">
     <meta name="keywords" content="criação, sites, programador, html, css, javascript
     java">
     <meta name="author" content="Gabriel Kewen">
@@ -43,8 +42,8 @@
                 <div class="col">
                     <h1>Olá, meu nome é <span class="text-primary">Gabriel</span> e eu sou
                         <span class="text-primary">programador</span>!</h1>
-                    <p>Aqui você pode saber mais sobre mim e sobre como trabalho, dar uma olhada em minha experiência e
-                        habilidades ou entrar em contato para novos jobs.
+                    <p>Aqui você pode saber mais sobre mim, dar uma olhada em minha experiência e
+                        habilidades ou entrar em contato afim de uma oportunidade.
                     </p>
                     <a href="contato.html" class="btn"> Solicitar Orçamento</a>
                 </div>
@@ -58,20 +57,10 @@
     <section class="about">
         <div class="container">
             <h2 class="light-detail">Sobre mim</h2>
-            <p>Moro em Recife mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade,
-                durabilidade e que agregam valor para meus clientes.</p>
-            <p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor:
-                ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade,
-                responsividade e web semântica, sem descuidar da qualidade de código.</p>
-            <p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente
-                interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide
-                quando o produto está pronto.</p>
-            <p>Já desenvolvi projetos para grandes empresas como
-                <a href="http://bmw.com">BMW</a>,
-                <a href="http://bmw.com">UOL</a> e
-                <a href="http://google.com">Google</a>.
-                Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e
-                da acessibilidade da página.</p>
+            <p>Moro em Mogi Mirim, sou estudante da uninter em analise e desenvolvimento de sistemas. Estou no processo de criar meu portifolio
+            com projetos cada vez mais profissionais que de fato contribuam para um mundo melhor!</p>
+            <p>Almejo a web como minha plataforma de vôo, ou seja, quero alcançar a todos os clientes, seguindo as principais diretivas de acessibilidade,
+                responsividade e web semântica, e prezar pela qualidade dos serviços.</p>
         </div>
     </section>
 
@@ -79,20 +68,16 @@
         <div class="container">
             <h2 class="dark-detail">Habilidades</h2>
             <ul>
-                <li><span style="width: 60%">Photoshop | Sketch</span></li>
-                <li><span style="width: 100%">HTML5</span></li>
-                <li><span style="width: 80%">CSS3</span></li>
-                <li><span style="width: 80%">Javascript | Jquery</span></li>
-                <li><span style="width: 70%">Vue | Angular | React</span></li>
-                <li><span style="width: 90%">PHP</span></li>
-                <li><span style="width: 75%">Wordpress</span></li>
-                <li><span style="width: 50%">NodeJS</span></li>
-                <li><span style="width: 40%">Phyton | Ruby</span></li>
+                <li><span style="width: 50%">HTML5</span></li>
+                <li><span style="width: 50%">CSS3</span></li>
+                <li><span style="width: 20%">Javascript</span></li>
+                <li><span style="width: 50%">Java</span></li>
+                <li><span style="width: 70%">C++</span></li>
+                <li><span style="width: 10%">Spring</span></li>
             </ul>
         </div>
 
     </section>
-
 </main>
 
 <footer>
