--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="ie=firefox">
   <link rel="stylesheet" href="./assets/css/kiwi.css">
-  <link rel="stylesheet" href="./assets/css/awesome/all.min.css">
+  <link rel="stylesheet" href="assets/css/awesome/all.min.css">
   <link rel="icon" href="./assets/img/favicon.png">
   <title>Gabriel Kewen</title>
 </head>
@@ -21,7 +21,7 @@
           <a href="index.html">Ínicio</a>
         </li>
         <li>
-          <a href="contact.html" class="active">Contato</a>
+          <a href="projects.html" class="active">Contato</a>
         </li>
       </ul>
     </div>
