--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <meta charset="UTF-8">
 
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Projetos de um estudante em busca de uma oportunidade no mercado de desenvolvimento">
+    <meta name="description" content="Contrate o profissional certo para tirar suas
+    ideias do papel, faça já seu orçamento!">
     <meta name="keywords" content="criação, sites, programador, html, css, javascript
     java">
     <meta name="author" content="Gabriel Kewen">
@@ -15,7 +15,6 @@
     <link rel="icon" href="./assets/img/favicon.png">
     <title>Gabriel Kewen</title>
 </head>
-
 <body>
 <header>
     <nav>
@@ -25,13 +24,12 @@
                     <a href="index.html" class="active">Ínicio</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contato</a>
+                    <a href="projects.html">Contato</a>
                 </li>
             </ul>
         </div>
     </nav>
 </header>
-
 <main>
     <section class="intro">
         <div class="container">
@@ -42,10 +40,10 @@
                 <div class="col">
                     <h1>Olá, meu nome é <span class="text-primary">Gabriel</span> e eu sou
                         <span class="text-primary">programador</span>!</h1>
-                    <p>Aqui você pode saber mais sobre mim, dar uma olhada em minha experiência e
-                        habilidades ou entrar em contato afim de uma oportunidade.
+                    <p>Aqui você pode saber mais sobre mim e meus objetivos, verificar minha experiência e
+                        habilidades para entrar em contato e me oferecer uma <span class="text-primary">oportunidade!</span>
                     </p>
-                    <a href="contato.html" class="btn"> Solicitar Orçamento</a>
+                    <a href="projects.html" class="btn"> Me Empregue! </a>
                 </div>
                 <div class="col hidden-on-small">
                     <img src="./assets/img/devices.svg" class="devices">
@@ -53,33 +51,31 @@
             </div>
         </div>
     </section>
-
     <section class="about">
         <div class="container">
             <h2 class="light-detail">Sobre mim</h2>
-            <p>Moro em Mogi Mirim, sou estudante da uninter em analise e desenvolvimento de sistemas. Estou no processo de criar meu portifolio
-            com projetos cada vez mais profissionais que de fato contribuam para um mundo melhor!</p>
-            <p>Almejo a web como minha plataforma de vôo, ou seja, quero alcançar a todos os clientes, seguindo as principais diretivas de acessibilidade,
-                responsividade e web semântica, e prezar pela qualidade dos serviços.</p>
+            <p>Moro em Mogi Mirim, mas com trabalho remoto é possível me contratar do mundo todo. Almejo ser reconhecido por meus valores, conhecimento
+                e excelência de meu trabalho.</p>
+            <p>Para isso escolhi adentrar no mundo das tecnologias web, meio por onde posso alcançar a todos! (E ser contratado também). Sigo as principais diretivas de acessibilidade,
+                responsividade e web semântica, sem descuidar da qualidade de código.</p>
+            <p>Satisfazer os clientes é prioridade. Para isso, garanto o trabalho em grupo, respeito aos líderes do projeto, e aceitar críticas para me profissionalizar.</p>
         </div>
     </section>
-
     <section class="skills">
         <div class="container">
             <h2 class="dark-detail">Habilidades</h2>
             <ul>
-                <li><span style="width: 50%">HTML5</span></li>
-                <li><span style="width: 50%">CSS3</span></li>
-                <li><span style="width: 20%">Javascript</span></li>
-                <li><span style="width: 50%">Java</span></li>
-                <li><span style="width: 70%">C++</span></li>
-                <li><span style="width: 10%">Spring</span></li>
+                <li><span style="width: 100%">HTML5</span></li>
+                <li><span style="width: 80%">CSS3</span></li>
+                <li><span style="width: 80%">JavaScript</span></li>
+                <li><span style="width: 50%">Java | Spring</span></li>
+                <li><span style="width: 90%">C++</span></li>
+                <li><span style="width: 75%">Wordpress</span></li>
+                <li><span style="width: 40%">Phyton | Ruby</span></li>
             </ul>
         </div>
-
     </section>
 </main>
-
 <footer>
     <p>
         Gabriel Kewen - Analista de Sistemas | Programador
