--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 e excelência de meu trabalho.</p>
             <p>Para isso escolhi adentrar no mundo das tecnologias web, meio por onde posso alcançar a todos! (E ser contratado também). Sigo as principais diretivas de acessibilidade,
                 responsividade e web semântica, sem descuidar da qualidade de código.</p>
-            <p>Satisfazer os clientes é prioridade. Para isso, garanto o trabalho em grupo, respeito aos líderes do projeto, e aceitar críticas para me profissionalizar.</p>
+            <p>Satisfazer os clientes é prioridade. Para isso, garanto o trabalho em equipe, o respeito aos líderes do projeto, e disposição para aceitar críticas afim de me profissionalizar.</p>
         </div>
     </section>
     <section class="skills">
@@ -70,8 +70,7 @@
                 <li><span style="width: 80%">JavaScript</span></li>
                 <li><span style="width: 50%">Java | Spring</span></li>
                 <li><span style="width: 90%">C++</span></li>
-                <li><span style="width: 75%">Wordpress</span></li>
-                <li><span style="width: 40%">Phyton | Ruby</span></li>
+                <li><span style="width: 40%">Phyton</span></li>
             </ul>
         </div>
     </section>
