--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li>
                     <a href="projects.html">Contato</a>
                 </li>
+                <li>
+                    <a href="./projects/wasm/rayweb.html">Projetos</a>
+                </li>
             </ul>
         </div>
     </nav>
