--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="projects.html">Contato</a>
                 </li>
                 <li>
-                    <a href="./projects/wasm/rayweb.html">Projetos</a>
+                    <a href="./projects/wasm/rayweb/rayweb.html">Projetos</a>
                 </li>
             </ul>
         </div>
